# tsk

./: .gitignore  Cargo.toml  README.md  build.sh  how-to-build.md  install.sh
.github/workflows/: release.yml
completions/: tsk.bash  tsk.zsh
src/: main.rs  mcp.rs
