[package]
name = "tsk"
version = "1.6.1"
edition = "2024"
description = "Agent-first cli task tracker"

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
rand = "0.8"
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
